# sophia

./: .gitattributes  .gitignore  .npmignore  CHANELOG.md  Cargo.toml  README.md  index.d.ts  index.js  opvthis.md  package.json  pnpm-lock.yaml  simple-test.js  tsconfig.json
.github/workflows/: CI.yml  setup.yml
___test__/: index.spec.ts
benchmark/: bench.ts
docs/: code.fib.txt  code.geometry.txt  code.lib.txt  code.screen.txt  code.utils.txt
docs/win/: code.mod.txt  code.mouse.txt  code.screen.txt  code.window.txt
examples/: demo.ts  imageSearch1.ts  imageSearch2.ts  keyboard1.ts  keyboard2.ts  keyboard3.ts  lparam.ts  memory1.ts  mouse1.ts  nano-flag.ts  nano-fune.ts  nano-point.ts  nano-stre.ts  nano-time.ts  nanz-core.ts  ncli-util.ts  screen.ts  utils.ts  vw-mouse-click.ts  window1.ts  window2.ts  window3.ts  window4.ts  winx.ts
examples/images/: .gitignore
npm/win32-x64-msvc/: README.md  package.json
src/: fib.rs  geometry.rs  lib.rs  screen.rs  utils.rs
src/win/: keyboard.rs  memory.rs  mod.rs  mouse.rs  screen.rs  utils.rs  window.rs
