[package]
edition = "2021"
name    = "sophia"
version = "0.1.0"

[lib]
crate-type = ["cdylib"]

[dependencies]
active-win-pos-rs = "0.8"
crossbeam-channel = "0.5.12"
image             = "0.25.0"
lazy_static       = "1.4.0"
napi              = { version = "2.16.0", features = ["tokio_rt", "napi6"] }
napi-derive       = "2.16.0"
tokio             = { version = "1.21.1", features = ["full"] }
win-screenshot    = "4.0.10"

  [dependencies.windows]
  features = [
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_UI_WindowsAndMessaging",
    "Win32_Foundation",
    "Win32_Graphics_Gdi",
    "Win32_System_Threading",
    "Win32_System_LibraryLoader",
    "Win32_System_Diagnostics_Debug",
    "Win32_System_Diagnostics_ToolHelp",
    "Win32_System_ProcessStatus",
    "Win32_Storage_FileSystem",
  ]
  version = "0.54.0"

[build-dependencies]
napi-build = "2.1.2"

[profile.release]
lto = true
